global.css
body {
	font-family: Verdana, Arial, Sans-Serif;
	font-size: 13px;
	text-align: center; /* IE 5 fix */
	line-height: 1.4;
	color: #93a1a1;
	background: #002b36;
	/*background: transparent url("https://www.toptal.com/designers/subtlepatterns/patterns/seamless_paper_texture.png") repeat scroll 0% 0%;*/
}

.tborder.search_threads_table {
	border: 0px;
	background: none;
}

.post_author .largetext span {
	color: #d33682 !important;
	padding-left: 5px;
}

.usercp_nav_item {
	display: block;
	padding: 3px;
}

.inline_block {
	display: inline-block;
}

.bigtext {
	font-size: 15px;

}
.search_error_message {
	padding-top: 1.3em;
	padding-bottom: 1.3em;
}


.search_threads_thread {
	padding-top: 1em;
	padding-bottom: 1em;
	font-size: 1.6em;
}

.posttop {
	border: none;
}

.tborder.postbit_table {
	border: 1px solid #424242;
}

.post_buttons {
	border: 0px;
	background: #586e75;
	border-top: 1px solid #93a1a1;
}

.post_avatar {
	width: 50px;
	height: 50px;
}

.name_topic {
	margin-top: 0.5em;
	margin-bottom: -0.3em;
	font-size: 1.3em;
}

.quotecontent img {
	width: 100%;
}

#header {
	height: 1.3em;
}

#navlinks {
	display: inline-block;
	float: right;
	margin-left: 1em;
}

#nixerlogo {
	display: inline-block;
	margin-right: 1em;
}

#navcontainer {
	display: block;
	width: 95%;
	margin: auto;
	text-align: left;
}

.bottommenu {
	display: none;
}

#bottom_moved_menu {
}

a:link {
	color: #2aa198;
	text-decoration: none;
}

a:visited {
	color: #2aa198;
	text-decoration: none;
}

a:hover, a:active {
	color: #b58900;
	text-decoration: underline;
}

#container {
	width: 95%;
	margin: auto auto;
	padding: 0px;
	text-align: left; /* IE 5 fix */
}

#content {
	/* FIX: Make internet explorer wrap correctly */
	width: auto !important;

}

.menu ul {
	color: #424242;
	font-weight: bold;
	text-align: right;
	padding: 4px;
}

.menu ul a:link {
	color: #2aa198;
	text-decoration: none;
}

.menu ul a:visited {
	color: #2aa198;
	text-decoration: none;
}

.menu ul a:hover, .menu ul a:active {
	color: #93a1a1;
	text-decoration: none;
}

#panel {
	background: #002b36;
	color: #073642;
	font-size: 11px;
	border: 1px solid #2aa198;
	padding: 8px;
}

#panel .remember_me input {
	vertical-align: middle;
	margin-top: -1px;
}

table {
	color: #002b36
	font-family: Verdana, Arial, Sans-Serif;
	font-size: 13px;
}

.tborder {
	width: 100%;
	margin: auto auto;
	border: 0;
}

.thead {
	background: #002b36 url(images/thead_bg.gif) top left repeat-x;
	color: #2aa198;
}

.thead a:link {
	color: #2aa198;
	text-decoration: none;
}

.thead a:visited {
	color: #2aa198;
	text-decoration: none;
}

.thead a:hover, .thead a:active {
	color: #b58900;
	text-decoration: underline;
}

.tcat {
	background: #002b36;
	color: #073642;
	font-size: 12px;
}

.tcat a:link {
	color: #2aa198;
}

.tcat a:visited {
	color: #2aa198;
}

.tcat a:hover, .tcat a:active {
	color: #b58900;
}

.trow1 {
	background: #073642;
}

.trow2 {
	background: #073642;
}

.trow_shaded {
	background: #586e75;
}

.trow_selected td {
	background: #b58900;
}

.trow_sep {
	background: #073642;
	color: #2aa198;
	font-size: 12px;
	font-weight: bold;
}

.tfoot {
	background: #026CB1 url(images/thead_bg.gif) top left repeat-x;
	color: #F4F3F2;
}

.tfoot a:link {
	color: #073642;
	text-decoration: none;
}

.tfoot a:visited {
	color: #073642;
	text-decoration: none;
}

.tfoot a:hover, .tfoot a:active {
	color: #b58900;
	text-decoration: underline;
}

.bottommenu {
}

.navigation {
	color: #586e75;
	font-size: 13px;
	font-weight: bold;
}

.navigation a:link {
	text-decoration: none;
}

.navigation a:visited {
	text-decoration: none;
}

.navigation a:hover, .navigation a:active {
	text-decoration: none;
}

.navigation .active {
	color: #424242;
	font-size: 13px;
	font-weight: bold;
}

.smalltext {
	font-size: 12px;
}

.smalltext a {
	color: #586e75;
}

.largetext {
	font-size: 16px;
	font-weight: bold;
}

input.textbox {
	background: #002b36;
	color: #2aa198;
	border: 1px solid #93a1a1;
	padding: 1px;
}

textarea {
	background: #002b36;
	color: #93a1a1;
	border: 1px solid #2aa198;
	padding: 2px;
	font-family: Verdana, Arial, Sans-Serif;
	line-height: 1.4;
	font-size: 13px;
}

select {
	background: #b58900;
	border: 1px solid #2aa198;
}

.editor {
	background: #002b36;
	border: 1px solid #2aa198;
}

.editor_control_bar {
	background: #002b36;
	border: 1px solid #2aa198;
}

.autocomplete {
	background: #073642;
	border: 1px solid #2aa198;
	color: #424242;
}

.autocomplete_selected {
	background: #002b36;
	color: #2aa198;
}

.popup_menu {
	background: #073642;
	border: 1px solid #424242;
}

.popup_menu .popup_item {
	background: #073642;
	color: #424242;
}

.popup_menu .popup_item:hover {
	background: #073642;
	color: #b58900;
}

.trow_reputation_positive {
	background: #ccffcc;
}

.trow_reputation_negative {
	background: #ffcccc;
}

.reputation_positive {
	color: #859900;
}

.reputation_neutral {
	color: #444;
}

.reputation_negative {
	color: #dc322f;
}

.invalid_field {
	border: 1px solid #f30;
	color: #f30;
}

.valid_field {
	border: 1px solid #859900;
}

.validation_error {
	background: url(images/invalid.gif) no-repeat center left;
	color: #f30;
	margin: 5px 0;
	padding: 5px;
	font-weight: bold;
	font-size: 11px;
	padding-left: 22px;
}

.validation_success {
	background: url(images/valid.gif) no-repeat center left;
	color: #00b200;
	margin: 5px 0;
	padding: 5px;
	font-weight: bold;
	font-size: 11px;
	padding-left: 22px;
}

.validation_loading {
	background: url(images/spinner.gif) no-repeat center left;
	color: #555;
	margin: 5px 0;
	padding: 5px;
	font-weight: bold;
	font-size: 11px;
	padding-left: 22px;
}

/* Additional CSS (Master) */
img {
	max-width: 100%;
	border: none;
}

.clear {
	clear: both;
}

.hidden {
	display: none;
	float: none;
	width: 1%;
}

.hiddenrow {
	display: none;
}

.selectall {
	background-color: #073642;
	font-weight: bold;
	text-align: center;
}

.float_left {
	float: left;
}

.float_right {
	float: right;
}

.menu ul {
	list-style: none;
	margin: 0;
}

.menu li {
	display: inline;
	padding-left: 5px;
}

.menu img {
	padding-right: 5px;
	vertical-align: top;
}

#panel .links {
	margin: 0;
	float: right;
}

.expcolimage {
	float: right;
	width: auto;
	vertical-align: middle;
	margin-top: 3px;
}

img.attachment {
	border: 1px solid #2aa198;
	padding: 2px;
}

hr {
	background-color: #424242;
	color: #424242;
	height: 1px;
	border: 0px;
}

#copyright {
	font: 11px Verdana, Arial, Sans-Serif;
	margin: 0;
	padding: 10px 0 0 0;
}

#debug {
	float: right;
	text-align: right;
	margin-top: 0;
}

blockquote {
	border: 1px solid #2aa198;
	margin: 0;
	background: #073642;
	padding: 4px;
}

blockquote cite {
	font-weight: bold;
	border-bottom: 1px solid #2aa198;
	font-style: normal;
	display: block;
	margin: 4px 0;
}

blockquote cite span {
	float: right;
	font-weight: normal;
}

blockquote cite span.highlight {
	float: none;
	font-weight: bold;
	padding-bottom: 0;
}

.codeblock {
	background: #073642;
	border: 1px solid #2aa198;
	padding: 4px;
}

.codeblock .title {
	border-bottom: 1px solid #2aa198;
	font-weight: bold;
	margin: 4px 0;
}

.codeblock code {
	overflow: auto;
	height: auto;
	max-height: 200px;
	display: block;
	font-family: Monaco, Consolas, Courier, monospace;
	font-size: 13px;
}

.subforumicon {
	border: 0;
	vertical-align: middle;
}

.separator {
	margin: 5px;
	padding: 0;
	height: 0px;
	font-size: 1px;
	list-style-type: none;
}

form {
	margin: 0;
	padding: 0;
}

.popup_menu .popup_item_container {
	margin: 1px;
	text-align: left;
}

.popup_menu .popup_item {
	display: block;
	padding: 3px;
	text-decoration: none;
	white-space: nowrap;
}

.popup_menu a.popup_item:hover {
	text-decoration: none;
}

.autocomplete {
	text-align: left;
}

.subject_new {
	font-weight: bold;
}

.highlight {
	background: #FFFFCC;
	padding-top: 3px;
	padding-bottom: 3px;
}

.pm_alert {
	background: #FFF6BF;
	border: 1px solid #FFD324;
	text-align: center;
	padding: 5px 20px;
	margin-bottom: 15px;
	font-size: 11px;
}

.red_alert {
	background: #FBE3E4;
	border: 1px solid #A5161A;
	color: #A5161A;
	text-align: center;
	padding: 5px 20px;
	margin-bottom: 15px;
	font-size: 11px;
}

.high_warning {
	color: #CC0000;
}

.moderate_warning {
	color: #F3611B;
}

.low_warning {
	color: #AE5700;
}

div.error {
	padding: 5px 10px;
	border-top: 2px solid #FFD324;
	border-bottom: 2px solid #FFD324;
	background: #FFF6BF;
	font-size: 12px;
}

div.error p {
	margin: 0;
	color: #424242;
	font-weight: normal;
}

div.error p em {
	font-style: normal;
	font-weight: bold;
	padding-left: 24px;
	display: block;
	color: #C00;
	background: url(images/error.gif) no-repeat 0;
}

div.error ul {
	margin-left: 24px;
}

.online {
	color: #15A018;
}

.offline {
	color: #C7C7C7;
}

.pagination {
	font-size: 11px;
	padding-top: 10px;
	margin-bottom: 5px;
}

.tfoot .pagination, .tcat .pagination {
	padding-top: 0;
}
.pagination .pages {
	font-weight: bold;
}

.pagination .pagination_current, .pagination a {
	padding: 2px 6px;
	margin-bottom: 3px;
}

.pagination a {
	border: 1px solid #93a1a1;
}

.pagination .pagination_current {
	background: #d33682;
	border: 1px solid #586e75;
	font-weight: bold;
	color: #002b36;
}

.pagination a:hover {
	background: #586e75;
	color: #002b36;
	text-decoration: none;
}

.thread_legend, .thread_legend dd {
	margin: 0;
	padding: 0;
}

.thread_legend dd {
	padding-bottom: 4px;
	margin-right: 15px;
}

.thread_legend img {
	margin-right: 4px;
	vertical-align: bottom;
}

.forum_legend, .forum_legend dt, .forum_legend dd {
	margin: 0;
	padding: 0;
}

.forum_legend dd {
	float: left;
	margin-right: 10px;
}

.forum_legend dt {
	margin-right: 10px;
	float: left;
}

.success_message {
	color: #00b200;
	font-weight: bold;
	font-size: 10px;
	margin-bottom: 10px;
}

.error_message {
	color: #C00;
	font-weight: bold;
	font-size: 10px;
	margin-bottom: 10px;
}

.post_body {
	padding: 5px;
	background: #073642;
}

.post_content {
	border: 0px;
	padding: 5px 10px;
}

.quick_jump {
	background: url(images/jump.gif) no-repeat 0;
	width: 13px;
	height: 13px;
	padding-left: 13px; /* amount of padding needed for image to fully show */
	vertical-align: middle;
	border: none;
}

.repbox {
	font-size:16px;
	font-weight: bold;
	padding:5px 7px 5px 7px;
}

._neutral {
	background-color:#FAFAFA;
	color: #999999;
	border:1px solid #CCCCCC;
}

._minus {
	background-color: #FDD2D1;
	color: #CB0200;
	border:1px solid #980201;
}

._plus {
	background-color:#E8FCDC;
	color: #008800;
	border:1px solid #008800;
}

.pagination_breadcrumb {
	background-color: #f5f5f5;
	border: 1px solid #F4F3F2;
	outline: 1px solid #ccc;
	padding: 5px;
	margin-top: 5px;
	font-weight: normal;
	white-space: nowrap;
}

.pagination_breadcrumb_link {
	vertical-align: middle;
	cursor: pointer;
}

@media (max-width: 450px) {
	.forum_bit_description {
		display: none;
	}
}

